--- a/playbook.yml
+++ b/playbook.yml
@@ -4,7 +4,6 @@
   become: yes
   roles:
     - role: geerlingguy.mysql
-      mysql_root_password: super-secure-password
       mysql_databases:
         - name: gogs
           encoding: latin1
@@ -12,11 +11,6 @@
       mysql_users:
         - name: gogs
           host: "%"
-          password: password
+          password: gogs
           priv: "gogs.*:ALL"
     - role: geerlingguy.gogs
-      gogs_http_port: "80"
-      gogs_use_mysql: true
-      gogs_db_name: gogs
-      gogs_db_username: gogs
-      gogs_db_password: password
